--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -278,7 +278,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 
 
 .bages_estimated{color:red;  margin-bottom:5px; text-align:right;padding-right: 5px;}
-.edit_Packaging .textarea{ height:142px;  resize: none;}
+.edit_Packaging .textarea{ height:142px;  resize: none; width: 97%;}
 .edit_Packaging .textarea_label{ height:208px;  resize: none;}
 .add_btn{cursor:pointer; padding-right:5px;}
 .Packaging_footer{ background:#f7f7f7; min-height:150px; padding:20px 0px; clear:both;}
