--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -278,11 +278,14 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 
 
 .bages_estimated{color:red;  margin-bottom:5px; text-align:right;padding-right: 5px;}
-.edit_Packaging .textarea{ height:142px;  resize: none; width: 97%;}
+.edit_Packaging .textarea{ height:142px;  resize: none; width: 100%;}
+.edit_Packaging .labelArea .textarea#Notes{width: 97%;}
 .edit_Packaging .textarea_label{ height:208px;  resize: none;}
 .add_btn{cursor:pointer; padding-right:5px;}
 .Packaging_footer{ background:#f7f7f7; min-height:150px; padding:20px 0px; clear:both;}
-.edit_Packaging .add_btn{margin-left: 0px !important;padding-left: 0px !important;padding-top: 6px;}
+.edit_Packaging .add_btn{margin-left: 0px !important;padding-left: 0px !important;padding-top: 0px; margin: 0 auto;
+    text-align: left !important;}
+.edit_Packaging .add_btn i{ border: 1px solid #ddd;font-size: 18px;padding: 6px 8px;border-radius: 3px;     margin-left: -5px;}
 .edit_Packaging{ margin-top: 8px; min-width:300px;}
 .edit_Packaging .control__indicator {top:3px;}
 
@@ -330,7 +333,9 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .view_table table thead{ cursor:pointer;}
 .view_table table td label{margin-left: 6px;}
 .filter-btn button{margin-right: 10px !important;padding: 3px 5px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;  }
-
+.filter-btn a{ text-decoration: none; color:#fff; margin-right: 10px !important;padding: 3px 5px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;     background-color: #fe5716;
+border-color: #ff4800; border: 1px solid transparent; font-weight: 400;line-height: 1.42857143;text-align: center;white-space: nowrap;vertical-align: middle;}
+.filter-btn a:hover,.filter-btn a:focus,.filter-btn a:active{ color:#fff;}
 .side-filter input, select, textarea{height: 34px;padding: 6px 12px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
 .side-filter .menu-bg{padding:5px 20px ;height:50px; width:100%;background-color: #f5f5f5;border: 1px solid #e3e3e3;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);box-shadow: inset 0 1px 1px rgba(0,0,0,.05);}
 
@@ -511,3 +516,5 @@ input[type=number]::-webkit-outer-spin-button {
 .padding-50{padding-top:50px !important;}
 .padding-30{padding-top:30px !important;}
 .cLabel{padding: 0px;height: 20px;margin-bottom: 0px;}
+.mb-10{margin-bottom:10px;}
+.pr-0{}
