--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -362,8 +362,10 @@ border-color: #ff4800; border: 1px solid transparent; font-weight: 400;line-heig
 .shipment_edit .sameHeight_r{ height:840px;}
 .shipment_edit .textarea-edit{height:303px !important;}
 .shipment_edit .textarea-entry{height:150px !important; resize:none;}
-.shipment_edit .tab-bg{ background:#f4f4f4; margin-bottom:10px;margin-top: 10px;border-bottom: 1px solid #333; cursor:pointer;}
+.shipment_edit .tab-bg{ background:#f4f4f4; margin-bottom:0px;margin-top: 10px;border-bottom: 0px solid #333; cursor:pointer;}
 .shipment .active{display: block;padding:2px !important; margin-bottom: 20px;line-height: 1.42857143; border: 1px solid #337ab7;border-radius: 4px; }
+.shipment .tab-bg li:first-child a{border-top-left-radius: 5px !important;}
+.shipment .tab-bg li:last-child a{border-top-right-radius: 5px !important;}
 
 .shipment .panel-group .panel{border-radius: 0px;}
 .shipment .panel-default { border-color: #ddd;border-radius: 0px;}
@@ -516,3 +518,8 @@ input[type=number]::-webkit-outer-spin-button {
 .pr-0{}
 .noresult{ text-align:center; background: #f5f5f5 !important;height: 290px;  vertical-align: middle !important;}
 .noresult p{font-size: 14px!important;}
+
+
+.converiosnsMenu{  position: absolute;right: 0;top: -21px;}
+.customtabContent{margin-top:-1px;}
+.customtabContent .tab-pane.active{ border-top-left-radius: 0px !important;border-top-right-radius: 0px !important;}
