--- a/client/containers/Admin/AdminLogin/style.css
+++ b/client/containers/Admin/AdminLogin/style.css
@@ -27,14 +27,12 @@ hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 
 #wrapper {min-height:100%; position:relative;}
 
-
-
 /*////////////////////////------login------ /////////////////////////////*/
 
 a.hiddenanchor{display: none;}
 /** The wrapper that will contain our two forms **/
 #wrapper{right: 0px; margin: 0px auto; min-width:320px; max-width: 40%; position: relative;}
-#register,#login{position: absolute; top: 0px; width:100%; padding:30px; background:#ffffff; }
+#register,#login{ width:100%; padding:30px; background:#ffffff; }
 #register{z-index: 22; margin-top: 15%;}
 #login{  z-index: 22; margin-top: 30%;}
 .input-control{	display: block;width: 100%;height: 34px;padding: 6px 0px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border:none;border-bottom: 1px solid #ccc;	}
