--- a/client/containers/Login/style.css
+++ b/client/containers/Login/style.css
@@ -34,9 +34,9 @@ hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 a.hiddenanchor{display: none;}
 /** The wrapper that will contain our two forms **/
 #wrapper{right: 0px; margin: 0px auto; min-width:320px; max-width: 40%; position: relative;}
-#register,#login{position: absolute; top: 0px; width:100%; padding:30px; background:#ffffff; }
-#register{z-index: 22; margin-top: 15%;}
-#login{  z-index: 22; margin-top: 30%;}
+#register,#login{width:100%; padding:30px; background:#ffffff; }
+#register{z-index: 22;}
+#login{  z-index: 22; }
 .input-control{	display: block;width: 100%;height: 34px;padding: 6px 0px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border:none;border-bottom: 1px solid #ccc;	}
 .login_content input:hover {outline: none !important;}
 .login_content input:focus { -ms-outline: none !important; -webkit-outline: none !important; -moz-outline: none !important;outline: none !important; padding-left:15px; -webkit-transition:0.6s ease; -moz-transition:0.6s ease; -o-transition:0.6s ease; transition:  0.6s ease;}
