--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -93,7 +93,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 
 #hide4{ margin-bottom: 10px;}
-#hide4 a{background: #e5e5ff;color: #616161;padding: 2px 10px;border-radius: 2px;text-decoration: none; line-height: 22px;margin-right: 5px;}
+#hide4 a{background: #e5e5ff;color: #616161;padding: 2px 10px;border-radius: 2px;text-decoration: none; line-height: 22px;margin-right: 5px;  display: inline-block; margin-bottom: 5px;}
 
 
 /*////////////////////////------pddn------ /////////////////////////////*/
