--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -327,7 +327,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .view_table-queue table td label{margin-left: 0px;}
 .view_table-queue .table th,td{ font-weight:300 !important; font-size:12px; color:#000000; white-space: nowrap;  overflow: hidden;  text-overflow: ellipsis;}
 /*===========side-filter===========*/
- #filter-menu{width:230px; height:100%; height: 700px !important;float: left;overflow: scroll !important;overflow-x: hidden !important;}
+ #filter-menu{width:230px; min-height:100vh; height: 700px !important;float: left;overflow: auto !important;overflow-x: hidden !important;}
 #filter-grid{margin-left:230px; }
 
 .side-filter{height:100%; margin:-1px; width:100%}
