--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -187,12 +187,15 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 /*////////////////////////------checkbox and redio btn custom------ /////////////////////////////*/
 
+
+
 .left-inner-addon {position: relative;}
 .left-inner-addon input {padding-left: 25px !important;}
-.left-inner-addon i {position: absolute;padding: 10px 7px;pointer-events: none; color:#666 ;}
+.left-inner-addon i {position: absolute;padding: 10px 7px;pointer-events: none; color:#666 ; z-index: 99999;}
 .right-inner-addon {position: relative;}
-.right-inner-addon input {padding-right: 25px !important; }
-.right-inner-addon i {position: absolute;right: 0px;padding: 10px 12px;pointer-events: none;color:#666 ;}
+.right-inner-addon i {position: absolute;right: 0px;padding: 10px 12px;pointer-events: none;color:#666 ; z-index: 99999;}
+.right-inner-addon .react-datepicker__input-container{width:100%;}
+.right-inner-addon input{display: block;width: 100%;height: 30px;padding: 6px 25px 6px 12px ;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
 
 
 /*////////////////////////------custom scroll------ /////////////////////////////*/
