--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -370,7 +370,7 @@ border-color: #ff4800; border: 1px solid transparent; font-weight: 400;line-heig
 .filter_bg ul, ul li{ list-style:none; padding-left:0px; margin-left:0px; }
 .filter_bg ul, ul li .control{ margin-bottom:10px;  font-weight:400 !important;font-size:12px;}
 .filter_bg  #search {padding-top: 25px;}
-.filter_bg .scroll{ overflow:scroll; height:200px; overflow-x:hidden;}
+.filter_bg .scroll{ overflow:auto; height:200px; overflow-x:hidden;}
 .filter_bg .more{ overflow:scroll; height:100px; overflow-x:hidden;}
 
 .side-filter .head_bg{background: #e5e5ff;color: #000; padding:10px 20px; margin:0px -20px 12px -20px !important; height:30px; }
